[ext_resource path="res://scripts/systems/combat_server.gd" type="Script" id=10]

[gd_scene load_steps=6 format=3]

[ext_resource path="res://scenes/environment.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/ui_main.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/mobs/mob_basic.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/props/crate.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/systems/world_ai.gd" type="Script" id=6]

[node name="World" type="Node3D"]
script = ExtResource( 6 )

[node name="Environment" parent=".", instance=ExtResource( 1 )]
[node name="UI" parent=".", instance=ExtResource( 2 )]
[node name="Player" parent=".", instance=ExtResource( 3 )]
[node name="Mob1" parent=".", instance=ExtResource( 4 )]
[node name="Crate1" parent=".", instance=ExtResource( 5 )]

[node name="Mob1" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, 5 )

[node name="Crate1" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 2 )

[node name="CombatServer" type="Node" parent="."]
script = ExtResource( 10 )
\n[ext_resource path="res://scripts/systems/faction_system.gd" type="Script" id=12]\n[node name="FactionSystem" type="Node" parent="."]\nscript = ExtResource( 12 )\n
[ext_resource path="res://scripts/systems/world_director.gd" type="Script" id=11]
[node name="WorldDirector" type="Node3D" parent="."]
script = ExtResource( 11 )

[ext_resource path="res://scenes/ui/trade_window.tscn" type="PackedScene" id=13]
[node name="TradeWindow" parent=".", instance=ExtResource( 13 )]

[ext_resource path="res://scripts/systems/weather_system.gd" type="Script" id=21]
[node name="WeatherSystem" type="Node" parent="."]
script = ExtResource( 21 )

[ext_resource path="res://scripts/systems/biome_system.gd" type="Script" id=22]
[node name="BiomeSystem" type="Node" parent="."]
script = ExtResource( 22 )

[ext_resource path="res://scripts/systems/temperature_system.gd" type="Script" id=23]
[node name="TemperatureSystem" type="Node" parent="."]
script = ExtResource( 23 )


[ext_resource path="res://scripts/systems/build_system.gd" type="Script" id=31]
[node name="BuildSystem" type="Node" parent="."]
script = ExtResource( 31 )


[ext_resource path="res://scripts/systems/craft_system.gd" type="Script" id=32]
[node name="CraftSystem" type="Node" parent="."]
script = ExtResource( 32 )

[ext_resource path="res://scripts/world/resource_generator.gd" type="Script" id=41]
[node name="ResourceGenerator" type="Node" parent="."]
script = ExtResource( 41 )

[ext_resource path="res://scripts/world/resource_node.gd" type="Script" id=42]
# resource node scenes should be created in editor

[ext_resource path="res://scripts/systems/settlement_system.gd" type="Script" id=43]
[node name="SettlementSystem" type="Node" parent="."]
script = ExtResource( 43 )

[ext_resource path="res://scripts/systems/economy_system.gd" type="Script" id=44]
[node name="EconomySystem" type="Node" parent="."]
script = ExtResource( 44 )

[ext_resource path="res://scripts/systems/terrain_generator.gd" type="Script" id=51]
[node name="TerrainGenerator" type="Node3D" parent="."]
script = ExtResource( 51 )

[ext_resource path="res://scripts/systems/chunk_streamer.gd" type="Script" id=52]
[node name="ChunkStreamer" type="Node" parent="."]
script = ExtResource( 52 )

[ext_resource path="res://scripts/systems/seed_manager.gd" type="Script" id=53]
[node name="SeedManager" type="Node" parent="."]
script = ExtResource( 53 )

[ext_resource path="res://scripts/systems/biome_map.gd" type="Script" id=54]
[node name="BiomeMap" type="Node" parent="."]
script = ExtResource( 54 )
